--- a/IntelliinvestWebApp/pom.xml
+++ b/IntelliinvestWebApp/pom.xml
@@ -21,6 +21,14 @@
 		</dependency>
 
 		<!-- Spring framework -->
+
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-jmx -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jmx</artifactId>
+			<version>2.0.8</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
