--- a/IntelliinvestWebApp/src/main/resources/intelliinvest.properties
+++ b/IntelliinvestWebApp/src/main/resources/intelliinvest.properties
@@ -4,7 +4,7 @@ mail.from=intelliinvest.org@gmail.com
 mail.password=e2bc17ec197402944c39ebe9008e25ba
 #mail.from=intellii@intelliinvest.com
 #mail.password=e0202b9bd284497bb5e9709cdf77f68a
-context.url=104.199.142.91/IntelliinvestWebApp/rest
+context.url=localhost/IntelliinvestWebApp/rest
 #scheduled tasks
 schedule.thread.pool.count=4
 periodic.refresh.start.hr=1
