--- a/IntelliinvestWebApp/pom.xml
+++ b/IntelliinvestWebApp/pom.xml
@@ -12,6 +12,13 @@
 		<spring.version>4.2.3.RELEASE</spring.version>
 	</properties>
 
+	<repositories>
+		<repository>
+			<id>neuroph.sourceforge.net</id>
+			<url>http://neuroph.sourceforge.net/maven2/</url>
+		</repository>
+	</repositories>
+	
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -185,6 +192,12 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.6.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.neuroph</groupId>
+			<artifactId>neuroph-core</artifactId>
+			<version>2.9</version>
 		</dependency>
 
 	</dependencies>
