--- a/IntelliinvestWebApp/src/main/resources/intelliinvest.prod.properties
+++ b/IntelliinvestWebApp/src/main/resources/intelliinvest.prod.properties
@@ -7,14 +7,32 @@ mail.password=e2bc17ec197402944c39ebe9008e25ba
 context.url=130.211.243.180/IntelliinvestWebApp/rest
 #scheduled tasks
 schedule.thread.pool.count=4
-periodic.refresh.start.hr=00
-periodic.refresh.start.min=05
-periodic.refresh.end.hr=23
-periodic.refresh.end.min=55
-periodic.eod.price.refresh.start.hr=21
-periodic.eod.price.refresh.start.min=0
+#GoogleLiveStockPriceImporter
+periodic.refresh.start.hr=9
+periodic.refresh.start.min=0
+periodic.refresh.end.hr=4
+periodic.refresh.end.min=0
+#QuandlEODStockPriceImporter
+daily.eod.price.refresh.start.hr=21
+daily.eod.price.refresh.start.min=0
+daily.eod.price.refresh.thread.pool.count=4
 price.refresh.initial.delay=5
 price.refresh.period=360
+#DailyClosePriceForecaster
+daily.close.price.forecast.thread.pool.count=4
+daily.close.price.forecast.start.hr=22
+daily.close.price.forecast.start.min=0
+daily.close.price.forecast.history.years=2
+daily.close.price.forecast.history.months=0
+daily.close.price.forecast.data.dir=/opt/bitnami/apache-tomcat/logs
+daily.close.price.forecast.max.iterations=1000
+daily.close.price.forecast.learning.rate=0.5
+daily.close.price.forecast.max.error=0.0001
+#DailyClosePriceForecastReport
+daily.close.price.forecast.report.start.hr=21
+daily.close.price.forecast.report.start.min=30
+daily.close.price.forecast.report.data.dir=/opt/bitnami/apache-tomcat/logs
+daily.close.price.forecast.report.recepients=prashant.bajpai@gmail.com, manishahuja26@gmail.com, yogeshgulati1984@gmail.com, raja.rengasamy@gmail.com
 quandl_special_chracteres_mapping=&:#-:_#CINEMAXIN:CINEMAX
 default.timezone=Asia/Calcutta
 trail.period=30
