--- a/IntelliinvestWebApp/src/main/resources/intelliinvest.properties
+++ b/IntelliinvestWebApp/src/main/resources/intelliinvest.properties
@@ -4,14 +4,14 @@ mail.from=intelliinvest.org@gmail.com
 mail.password=e2bc17ec197402944c39ebe9008e25ba
 #mail.from=intellii@intelliinvest.com
 #mail.password=e0202b9bd284497bb5e9709cdf77f68a
-context.url=localhost/IntelliinvestWebApp/rest
+context.url=localhost:8080/IntelliinvestWebApp/rest
 #scheduled tasks
 schedule.thread.pool.count=4
 #GoogleLiveStockPriceImporter
-periodic.refresh.start.hr=23
+periodic.refresh.start.hr=9
 periodic.refresh.start.min=0
-periodic.refresh.end.hr=23
-periodic.refresh.end.min=59
+periodic.refresh.end.hr=16
+periodic.refresh.end.min=00
 #QuandlEODStockPriceImporter
 daily.eod.price.refresh.start.hr=21
 daily.eod.price.refresh.start.min=0
