--- a/IntelliinvestWebApp/src/main/resources/intelliinvest.prod.properties
+++ b/IntelliinvestWebApp/src/main/resources/intelliinvest.prod.properties
@@ -60,7 +60,7 @@ monthly.close.price.forecast.max.error=0.0001
 times.series.history.years=2
 times.series.history.months=0
 #mongodb configuration
-db.host=localhost
+db.host=10.140.0.3
 db.port=27017
 db.database=intelliinvest
 db.username=intelliinvest_user
