--- a/IntelliinvestWebApp/src/main/resources/intelliinvest.prod.properties
+++ b/IntelliinvestWebApp/src/main/resources/intelliinvest.prod.properties
@@ -22,10 +22,10 @@ daily.eod.price.refresh.thread.pool.count=4
 price.refresh.initial.delay=5
 price.refresh.period=360
 #DailyClosePriceForecastReport
-daily.close.price.forecast.report.start.hr=21
-daily.close.price.forecast.report.start.min=30
-daily.close.price.forecast.report.data.dir=/opt/bitnami/apache-tomcat/logs/data
-daily.close.price.forecast.report.recepients=prashant.bajpai@gmail.com, manishahuja26@gmail.com, yogeshgulati1984@gmail.com, raja.rengasamy@gmail.com
+close.price.forecast.report.start.hr=21
+close.price.forecast.report.start.min=30
+close.price.forecast.report.data.dir=/opt/bitnami/apache-tomcat/logs/data
+close.price.forecast.report.recepients=prashant.bajpai@gmail.com, manishahuja26@gmail.com, yogeshgulati1984@gmail.com, raja.rengasamy@gmail.com
 #DailyClosePriceForecaster
 daily.close.price.forecast.thread.pool.count=4
 daily.close.price.forecast.start.hr=21
