--- a/IntelliinvestWebApp/src/main/resources/intelliinvest.properties
+++ b/IntelliinvestWebApp/src/main/resources/intelliinvest.properties
@@ -22,10 +22,10 @@ daily.eod.price.refresh.thread.pool.count=4
 price.refresh.initial.delay=5
 price.refresh.period=360
 #DailyClosePriceForecastReport
-daily.close.price.forecast.report.start.hr=21
-daily.close.price.forecast.report.start.min=30
-daily.close.price.forecast.report.data.dir=C:/data
-daily.close.price.forecast.report.recepients=prashant.bajpai@gmail.com,prashant.bajpai@gmail.com
+close.price.forecast.report.start.hr=21
+close.price.forecast.report.start.min=30
+close.price.forecast.report.data.dir=C:/data
+close.price.forecast.report.recepients=prashant.bajpai@gmail.com,prashant.bajpai@gmail.com
 #DailyClosePriceForecaster
 daily.close.price.forecast.thread.pool.count=4
 daily.close.price.forecast.start.hr=21
