Added Industry Analysis

--- a/IntelliinvestWebApp/src/main/resources/intelliinvest.prod.properties
+++ b/IntelliinvestWebApp/src/main/resources/intelliinvest.prod.properties
@@ -4,7 +4,7 @@ mail.from=intelliinvest.org@gmail.com
 mail.password=e2bc17ec197402944c39ebe9008e25ba
 #mail.from=intellii@intelliinvest.com
 #mail.password=e0202b9bd284497bb5e9709cdf77f68a
-context.url=104.199.186.171/IntelliinvestWebApp/rest
+context.url=104.199.173.131/IntelliinvestWebApp/rest
 quandl_special_chracteres_mapping=&:#-:_#CINEMAXIN:CINEMAX
 default.timezone=Asia/Calcutta
 trail.period=30
@@ -16,8 +16,8 @@ periodic.refresh.start.min=0
 periodic.refresh.end.hr=16
 periodic.refresh.end.min=00
 #QuandlEODStockPriceImporter
-daily.eod.price.refresh.start.hr=21
-daily.eod.price.refresh.start.min=0
+daily.eod.price.refresh.start.hr=20
+daily.eod.price.refresh.start.min=30
 daily.eod.price.refresh.thread.pool.count=4
 price.refresh.initial.delay=5
 price.refresh.period=360
@@ -26,6 +26,9 @@ close.price.forecast.report.start.hr=21
 close.price.forecast.report.start.min=30
 close.price.forecast.report.data.dir=/opt/bitnami/apache-tomcat/logs/data
 close.price.forecast.report.recepients=prashant.bajpai@gmail.com, manishahuja26@gmail.com, yogeshgulati1984@gmail.com, raja.rengasamy@gmail.com
+#SignalGenerator Jobs Parameters
+daily.stock.signals.generator.start.hr=21
+daily.stock.signals.generator.start.min=35
 #DailyClosePriceForecaster
 daily.close.price.forecast.thread.pool.count=4
 daily.close.price.forecast.start.hr=21
@@ -56,6 +59,17 @@ monthly.close.price.forecast.data.dir=/opt/bitnami/apache-tomcat/logs/data
 monthly.close.price.forecast.max.iterations=1000
 monthly.close.price.forecast.learning.rate=0.5
 monthly.close.price.forecast.max.error=0.0001
+#StockFundamentalsImporter
+stock.fundamentals.refresh.start.month=10
+stock.fundamentals.refresh.start.day=1
+stock.fundamentals.refresh.start.hr=5
+stock.fundamentals.refresh.start.min=0
+stock.fundamentals.data.dir=C:/data
+#FundamentalAnalysisForecaster
+forecast.fundamental.analysis.start.month=10
+forecast.fundamental.analysis.start.day=1
+forecast.fundamental.analysis.start.hr=6
+forecast.fundamental.analysis.start.min=0
 #Time Series
 times.series.history.years=2
 times.series.history.months=0
@@ -65,3 +79,7 @@ db.port=27017
 db.database=intelliinvest
 db.username=intelliinvest_user
 db.password=Welcome123
+#Stock Signals Related Parameters
+delta=5
+volume.weightage=0:1:1#1:2:1.1#2:4:1.2#4:1000:1.3
+ma=10
