--- a/IntelliinvestWebApp/pom.xml
+++ b/IntelliinvestWebApp/pom.xml
@@ -10,6 +10,8 @@
 	<properties>
 		<jdk.version>1.8</jdk.version>
 		<spring.version>4.2.3.RELEASE</spring.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<repositories>
@@ -18,7 +20,7 @@
 			<url>http://neuroph.sourceforge.net/maven2/</url>
 		</repository>
 	</repositories>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
