--- a/IntelliinvestWebApp/src/main/resources/intelliinvest.prod.properties
+++ b/IntelliinvestWebApp/src/main/resources/intelliinvest.prod.properties
@@ -20,11 +20,11 @@ daily.eod.price.refresh.start.hr=20
 daily.eod.price.refresh.start.min=30
 daily.eod.price.refresh.thread.pool.count=4
 price.refresh.initial.delay=5
-price.refresh.period=360
 #FundamentalAnalysisForecaster
 forecast.fundamental.analysis.start.hr=21
 forecast.fundamental.analysis.start.min=25
 forecast.fundamentals.analysis.min.year.quarter=2014Q1
+price.refresh.period=360
 #DailyClosePriceForecastReport
 close.price.forecast.report.start.hr=21
 close.price.forecast.report.start.min=30
@@ -82,3 +82,4 @@ db.password=Welcome123
 delta=5
 volume.weightage=0:1:1#1:2:1.1#2:4:1.2#4:1000:1.3
 ma=10
+movingAverage=50
