Fundamental Analysis changes

--- a/IntelliinvestWebApp/src/main/resources/intelliinvest.properties
+++ b/IntelliinvestWebApp/src/main/resources/intelliinvest.properties
@@ -20,7 +20,7 @@ daily.eod.price.refresh.start.hr=20
 daily.eod.price.refresh.start.min=30
 daily.eod.price.refresh.thread.pool.count=4
 price.refresh.initial.delay=5
-price.refresh.period=360
+price.refresh.period=600
 #FundamentalAnalysisForecaster
 forecast.fundamental.analysis.start.hr=21
 forecast.fundamental.analysis.start.min=25
@@ -83,3 +83,8 @@ delta=5
 volume.weightage=0:1:1#1:2:1.1#2:4:1.2#4:1000:1.3
 ma=10
 movingAverage=50
+##SMS Parameters ##
+sms.username=kapbulk
+sms.password=kapbulk@user!123
+sms.senderId=KAPMSG
+sms.host=http://123.63.33.43/blank/sms/user/urlsmstemp.php
