--- a/IntelliinvestWebApp/src/main/resources/intelliinvest.properties
+++ b/IntelliinvestWebApp/src/main/resources/intelliinvest.properties
@@ -83,6 +83,10 @@ delta=5
 volume.weightage=0:1:1#1:2:1.1#2:4:1.2#4:1000:1.3
 ma=10
 movingAverage=50
+##### empty this field, to pick it from the DB #######
+magicnumber.bollinger=.15
+oscillator.buy=20
+oscillator.sell=80
 ##SMS Parameters ##
 sms.username=kapbulk
 sms.password=kapbulk@user!123
