stock analysis changes for fundamental data & sms api changes

--- a/IntelliinvestWebApp/src/main/resources/intelliinvest.prod.properties
+++ b/IntelliinvestWebApp/src/main/resources/intelliinvest.prod.properties
@@ -92,3 +92,7 @@ sms.username=kapbulk
 sms.password=kapbulk@user!123
 sms.senderId=KAPMSG
 sms.host=http://123.63.33.43/blank/sms/user/urlsmstemp.php
+sms.report.host=http://www.smsjust.com/sms/user/response.php
+sms.report.delivery.status.pending=PENDING
+sms.report.token.splitter=<BR>
+sms.messagetype=TXT
