--- a/IntelliinvestWebApp/src/main/resources/intelliinvest.prod.properties
+++ b/IntelliinvestWebApp/src/main/resources/intelliinvest.prod.properties
@@ -84,7 +84,9 @@ volume.weightage=0:1:1#1:2:1.1#2:4:1.2#4:1000:1.3
 ma=10
 movingAverage=50
 ##### empty this field, to pick it from the DB #######
+magicnumber.adx=30
 magicnumber.bollinger=.15
+magicnumber.oscillator=32
 oscillator.buy=20
 oscillator.sell=80
 ##SMS Parameters ##
